# DMSO-Terminal

./: .gitignore  SETUP_COMPLETE.md  pyrightconfig.json  requirements.txt
frontend/: Cargo.toml
frontend/src/: main.rs  terminal.rs
server/: Cargo.toml
server/src/: main.rs  mod.rs
server/src/broadcast/: broadcast_node.rs  hierarchy.rs  mod.rs
server/src/exchange/: mod.rs
server/src/exchange/candle/: candle.rs  indicator.rs  mod.rs  ohlcv_candle.rs
server/src/exchange/candle_streams/: candle_streams.rs  candle_subscription.rs  mod.rs
server/src/helpers/: interval.rs  manual_rc.rs  mod.rs
src/: candle.py  candle_builder.py  candles.py  dex.py  helpers.py  main.py  plot.py  time_interval.py
